# stock_analyzer

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
docs/superpowers/plans/: 2026-05-05-stock-analyzer.md  2026-05-13-covered-calls.md  2026-05-15-models-orm-refactor.md  2026-05-15-track-record-analytics.md
docs/superpowers/specs/: 2026-05-05-stock-analyzer-design.md  2026-05-13-covered-calls-design.md  2026-05-15-models-orm-refactor-design.md  2026-05-15-track-record-analytics-design.md  2026-05-15-wheel-csp-design.md
migrations/: env.py
migrations/versions/: 0001_initial.py
scripts/: run_insiders.sh  run_portfolio.sh
src/stock_analyzer/: __init__.py  cache.py  config.py  http_client.py  llm.py  logging.py  preflight.py  serialization.py
src/stock_analyzer/agents/: insider.py  news_reranker.py  portfolio.py
src/stock_analyzer/calendar/: __init__.py  nyse.py
src/stock_analyzer/cli/: discover.py  insider.py  portfolio.py  rebalance.py
src/stock_analyzer/data/: brokerage.py  chart_img.py  earnings_calendar.py  eps_revisions.py  finnhub.py  fred_macro.py  fundamentals.py  hedge_funds.py  historical_volatility.py  insider.py  insider_selling.py  market_news.py  options_chain.py  options_symbols.py  orats.py  political.py  sec_edgar.py  sector_rotation.py  share_trades.py  technical_indicators.py  ticker.py  transactions.py  transcripts.py
src/stock_analyzer/db/: __init__.py  repository.py  session.py  tables.py  track_record.py
src/stock_analyzer/discover/: __init__.py  analyst.py  cc_backfill.py  cc_eligibility.py  cc_render.py  cc_validation.py  market_themes.py  peers.py  persistence.py  premortem.py  ranker.py  rebalance_cc.py  rebalance_holdings.py  rebalance_persist.py  rebalance_schema.py  rebalance_sections.py  rebalancer.py  redteam.py  report.py  report_html.py  report_pdf.py  report_sections.py  reviewer.py  schemas.py  screen.py  sizer.py  tax_lot_helper.py  track_record.py  universe.py
src/stock_analyzer/experimental/: __init__.py  dashboard.py
src/stock_analyzer/models/: __init__.py  llm.py  market.py  portfolio.py  rebalance.py  reports.py  track_record.py
src/stock_analyzer/persistence/: __init__.py  db.py  models.py  repositories.py
src/stock_analyzer/reporting/: html.py  smtp.py
tests/: conftest.py  test_brokerage_classification.py  test_cc_backfill.py  test_cc_eligibility.py  test_cc_schema.py  test_cc_validation.py  test_db_roundtrip.py  test_historical_volatility.py  test_options_chain.py  test_options_symbols.py  test_orats.py  test_pipeline_wiring.py  test_premium_deployment.py  test_report_parsers.py  test_reviewer_repair.py  test_round_lot_coverage.py  test_schemas_ev.py  test_screen.py  test_section_dispatch_parity.py  test_tax_lot_helper.py  test_track_record.py  test_track_record_cc.py
tests/fixtures/: snaptrade_chain_nvda.json
tests/unit/: test_config.py  test_logging.py
tests/unit/calendar/: test_nyse.py
tests/unit/persistence/: test_db.py  test_models.py  test_repositories.py
