[project]
name = "stock-analyzer"
version = "0.1.0"
description = "Daily pre-market intelligence pipeline emailing three Claude-analyzed reports."
requires-python = ">=3.14"
authors = [{ name = "Snehal Soni", email = "snehal@thesonihub.com" }]
license = { text = "Proprietary" }
readme = "README.md"

dependencies = [
    "agno>=0.5.0",
    "anthropic>=0.40.0",
    "aiosmtplib>=3.0.0",
    "alembic>=1.13.0",
    "crawl4ai>=0.4.0",
    "feedparser>=6.0.11",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "pandas-market-calendars>=4.4.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dateutil>=2.9.0",
    "snaptrade-python-sdk>=11.0.0",
    "sqlalchemy>=2.0.35",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "typer>=0.12.5",
    "yfinance>=0.2.43",
]

[project.scripts]
stock-analyzer = "stock_analyzer.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_analyzer"]

[dependency-groups]
dev = [
    "aiosmtpd>=1.4.6",
    "freezegun>=1.5.1",
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.1",
    "ruff>=0.6.9",
    "vcrpy>=6.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --strict-markers"
markers = [
    "integration: hits recorded HTTP cassettes",
    "e2e: runs the full pipeline with stubbed Claude",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_ignores = true
files = ["src/stock_analyzer"]
