[project]
name = "stock-analyzer"
version = "0.1.0"
description = "Personal portfolio analyzer with insider/political trade signals."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "agno[os]>=2.6.4",
    "anthropic>=0.40.0",
    "finnhub-python>=2.4",
    "google-genai>=1.75.0",
    "httpx>=0.28",
    "orjson>=3.10",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0.0",
    "reportlab>=4.0",
    "snaptrade-python-sdk>=11.0.0",
    "tavily-python>=0.7.24",
    "yfinance>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # flake8-simplify
    "RET", # flake8-return
]
ignore = [
    "E501",  # line-too-long — let the formatter own this
    "B008",  # function-call-in-default — Pydantic Field(default_factory=...) is fine
]

[project.scripts]
analyze-portfolio = "stock_analyzer.cli.portfolio:main"
analyze-insiders = "stock_analyzer.cli.insider:main"
discover-stocks = "stock_analyzer.cli.discover:main"
rebalance-portfolio = "stock_analyzer.cli.rebalance:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_analyzer"]
